# cui

./: .gitignore  CMakeLists.txt  README.md
src/: color.c  main.c  renderer.c  utils.c
src/include/: color.h  renderer.h  utils.h
src/linux/: opengl.c  window.c
src/linux/include/: opengl.h  window.h
src/macos/: app.m  opengl.m  window.m
src/macos/include/: app.h  opengl.h  window.h
src/shaders/frame/: shader.frag  shader.vert
src/shaders/image/: shader.frag  shader.vert
src/widgets/: frame.c  image.c  window.c
src/widgets/include/: frame.h  image.h  window.h
src/windows/: opengl.c  window.c
src/windows/include/: opengl.h  window.h
